style/main.css
:root {
    --space-1: 4px;
    --space-2: 8px;
    --space-3: 24px;
    --space-4: 32px;
    --space-5: 64px;
    --space-6: 80px;
    --space-7: 120px;
    --space-8: 160px;
    --fontsize-normal: 1rem;
    --fontsize-big: 1.25rem;
    --fontsize-bigger: 1.5rem;
    --fontsize-huge: 3.25rem;
    --breakpoints-0: 414px;
    --breakpoints-1: 592px;
    --breakpoints-2: 670px;
    --breakpoints-3: 900px;
    --breakpoints-4: 1080px;
    --colors-primary: #472C1A;
    --colors-secondary: #A65816;
    --colors-caption: #926B56;
    --colors-light: #D7C1B6;
    --colors-background-blue: #EBF5FB;
    --colors-background-yellow: #F2F0E9;
    --rounded: 4px;
} 

body {
    font-family: 'PT Sans',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    background: linear-gradient(var(--colors-background-blue), var(--colors-background-yellow));
    color: var(--colors-primary);
    padding: var(--space-3) 0 var(--space-7);
    margin: 0 var(--space-5) 0 var(--space-6);
    height: 100%;
    /* border-right: 1px solid var(--colors-primary);*/ 
}

nav .link, h1, h2, h3 {
    font-family: 'PT Serif', Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
    font-weight: normal;
}

.who {
    margin-top: var(--space-8);
    margin-bottom: var(--space-2);
}

nav {
    width: 100%;
    border-bottom: 1px solid var(--colors-primary);
    position: absolute;
    left: calc(-1 * var(--space-6));
    padding-right:  var(--space-6);
    padding-bottom: var(--space-3);
    font-size: var(--fontsize-normal)
}

nav ul {
    padding: 0px;
    list-style: none;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin: 0;
}

nav ul li {
    margin-right: var(--space-5);
}

h1 {
    font-size: var(--fontsize-huge);
    color: var(--colors-primary);
}

.overview {
    color: var(--colors-primary);
    margin-top: var(--space-3);
}

h2 {
    font-size: var(--fontsize-big);
    color:var(--colors-secondary); 
    margin: 0;
}

h3 {
    font-size: var(--fontsize-normal);
    font-weight: normal;
    margin: 0px;
}

h4 {
    margin-top: var(--space-1);
    font-size: var(--fontsize-normal);
    font-weight: normal;
    color: var(--colors-caption);
}

.container p {
    font-size: var(--fontsize-big);
    line-height: 1.5em;
    margin: var(--space-3) 0;
}

.container a:link {
    text-decoration: none;
    color: var(--colors-primary);
    border: none;
    border-bottom: 2px dotted var(--colors-light);
}

.container a:hover {
    border-bottom: 1px solid var(--colors-primary);
}

.sub-header {
    margin-top: var(--space-1);
    color: var(--colors-caption);
}

.header-background {
    margin: var(--space-6) 0 var(--space-3);
    font-size: var(--fontsize-bigger);
    color: var(--colors-primary);
    width: initial;
    box-sizing: border-box;
    display: inline-block;
    padding: var(--space-1) var(--space-2);
    border-radius: var(--space-1);
}

.container {
    margin-bottom: var(--space-4);
    max-width: 800px;
}

.card-container {
    display: flex;
    justify-content: start;
}

.card-details {
   margin-top: var(--space-2);
    display: flex;
   justify-content: space-between;
}
 
.card.middle {
    margin: 0 var(--space-4);
}

.card-img {
    width: 348px;
    height: autopx;
}

.link {
    color: var(--colors-primary);
    position: relative;
    display: block;
    cursor: pointer;
    width: fit-content;
    text-decoration: none;
}

.link:hover {
    color: var(--colors-secondary)
}

section {
    margin-bottom: 20px;
}

section > h1 {
    font-weight: normal;
    line-height: 48px;
    margin-bottom: 20px;
}

section > img {
    width: 80%;
    margin: 28px 10% auto 10%;
}

.caption {
    text-align: center;
    font-size: var(--fontsize-normal);
    font-style: italic;
    margin-top: 0;
    color: var(--colors-caption);
}

.button {
    color: var(--colors-primary);
    font-size: var(--fontsize-normal);
    text-decoration: none;
}

.button:hover {
    color: var(--colors-secondary);
}

/*Passcode screen*/

#lockscreen {
    background: linear-gradient(var(--colors-background-blue), var(--colors-background-yellow));
    width: 100vw;
    height: 100vh;
    display: flex;
    font-family: 'PT Sans',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    font-size: var(--fontsize-normal)
}

#lock-container {
    margin: auto;
    display: flex;
    flex-direction: column;
    padding: 20px;
    width: initial;
}

#lock-container > * {
    margin: auto;
}

#passcode {
    margin-top: 40px;
    margin-right: var(--space-2);
    border-radius: 4px;
    padding: 8px 12px;
    height: 24px;
    width: 120px;
    border: none;
}

#invalid-passcode {
    margin-top: 12px;
    display: none;
    color: #d32f2f;
    position: absolute;
    font-size: 14px;
}

#lock-icon {
    margin: auto;
    height: 48px;
    padding: 8px;
    border-radius: 50%;
    border: 4px solid var(--colors-primary);
}

.principles {
    font-size: var(--fontsize-big)
}

.top {
    font-weight: bold;
}

